--- a/index.html
+++ b/index.html
@@ -10,57 +10,51 @@
     <title>tannaz sadeghi</title>
 </head>
 <body>
-
-    <div class="ui stackable grid">
-        <div class="row"></div>
-        <div class="row"></div>
-        <div class="row"></div>
-        <div class="two wide column"></div>
-        <div class="six wide column">
-            <!-- <img src="assets/tannaz.gif" id="avatar"/> -->
-            <img class="ui fluid image" src="assets/tannaz.gif"/>
-        </div>
-        <div class="six wide column">
-            <div class="row"></div>
-            <br/>
-            <br/>
-            <br/>
-            <h1>hi, i'm tannaz!</h1>
-            <h2>a digital product designer based in iran.</h2>
-            <p>I strive to create beautiful solutions, spectacular sights and aesthetic visions.</p>
-            <p>
-                ____
-                <br/>
-                see my <a href="assets/tannazsadeghi-resume.pdf">resumé</a>
-                <br/>
-                or get in touch about projects
-                <br/>
-                <div>
-                    <a href="mailto:tz.sadeghi@outlook.com">
-                        <button class="medium ui icon circular button">
-                            <i class="mail outline icon"></i>
-                        </button>
-                    </a>
-                    <a href="https://dribbble.com/tannazsadeghi">
-                        <button class="medium ui icon circular button">
-                            <i class="dribbble icon"></i>
-                        </button>
-                    </a>
-                    <a href="https://www.instagram.com/potatotaster/">
-                        <button class="medium ui icon circular button">
-                            <i class="instagram icon"></i>
-                        </button>
-                    </a>
-                    <a href="https://www.linkedin.com/in/tannazsadeghi/">
-                        <button class="medium ui icon circular button">
-                            <i class="linkedin alternate icon"></i>
-                        </button>
-                    </a>
-                </div>
-            </p>
-        </div>
-        <div class="two wide column"></div>
+<div class="ui stackable grid">
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="two wide column"></div>
+    <div class="six wide middle aligned column">
+        <img class="ui large right floated image" src="assets/tannaz.gif" alt="avatar"/>
     </div>
-
+    <div class="six wide middle aligned column">
+        <div class="row"></div>
+        <h1>hi, i'm tannaz!</h1>
+        <h2>a digital product designer based in iran.</h2>
+        <p>I strive to create beautiful solutions, spectacular sights and aesthetic visions.</p>
+        <p>
+            ____
+            <br/>
+            see my <a href="assets/tannazsadeghi-resume.pdf">resumé</a>
+            <br/>
+            or get in touch about projects
+            <br/>
+        </p>
+        <div>
+            <a href="mailto:tz.sadeghi@outlook.com">
+                <button class="ui icon circular large button">
+                    <i class="mail outline icon"></i>
+                </button>
+            </a>
+            <a href="https://dribbble.com/tannazsadeghi">
+                <button class="ui icon circular large button">
+                    <i class="dribbble icon"></i>
+                </button>
+            </a>
+            <a href="https://www.instagram.com/potatotaster/">
+                <button class="ui icon circular large button">
+                    <i class="instagram icon"></i>
+                </button>
+            </a>
+            <a href="https://www.linkedin.com/in/tannazsadeghi/">
+                <button class="ui icon circular large button">
+                    <i class="linkedin alternate icon"></i>
+                </button>
+            </a>
+        </div>
+    </div>
+    <div class="two wide column"></div>
+</div>
 </body>
 </html>
