--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="row"></div>
     <div class="row"></div>
     <div class="row"></div>
-    <div class="two wide column"></div>
+    <div class="one wide column"></div>
     <div class="six wide middle aligned column">
         <img class="ui large right floated image" src="assets/tannaz.gif" alt="avatar"/>
     </div>
@@ -26,7 +26,7 @@
         <p>
             ____
             <br/>
-            see my <a href="assets/tannazsadeghi-resume.pdf">resumé</a>
+            see my <a href="assets/tannazsadeghi-resume.pdf" target="_blank">resumé</a>
             <br/>
             or get in touch about projects
             <br/>
@@ -54,7 +54,7 @@
             </a>
         </div>
     </div>
-    <div class="two wide column"></div>
+    <div class="three wide column"></div>
 </div>
 </body>
 </html>
