--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="row"></div>
     <div class="one wide column"></div>
     <div class="six wide middle aligned column">
-        <img class="ui large right floated image" src="assets/tannaz.gif" alt="avatar"/>
+        <img class="ui fluid image" src="assets/tannaz.gif" alt="avatar"/>
     </div>
-    <div class="six wide middle aligned column">
+    <div class="eight wide middle aligned column">
         <div class="row"></div>
         <h1>hi, i'm tannaz!</h1>
         <h2>a digital product designer based in iran.</h2>
@@ -32,29 +32,22 @@
             <br/>
         </p>
         <div>
-            <a href="mailto:tz.sadeghi@outlook.com">
-                <button class="ui icon circular large button">
-                    <i class="mail outline icon"></i>
-                </button>
+            <a href="mailto:tz.sadeghi@outlook.com" class="ui icon circular large button">
+                <i class="mail outline icon"></i>
             </a>
-            <a href="https://dribbble.com/tannazsadeghi">
-                <button class="ui icon circular large button">
-                    <i class="dribbble icon"></i>
-                </button>
+            <a href="https://dribbble.com/tannazsadeghi" class="ui icon circular large button" target="_blank">
+                <i class="dribbble icon"></i>
             </a>
-            <a href="https://www.instagram.com/potatotaster/">
-                <button class="ui icon circular large button">
-                    <i class="instagram icon"></i>
-                </button>
+            <a href="https://www.instagram.com/potatotaster/" class="ui icon circular large button" target="_blank">
+                <i class="instagram icon"></i>
             </a>
-            <a href="https://www.linkedin.com/in/tannazsadeghi/">
-                <button class="ui icon circular large button">
-                    <i class="linkedin alternate icon"></i>
-                </button>
+            <a href="https://www.linkedin.com/in/tannazsadeghi/" class="ui icon circular large button" target="_blank">
+                <i class="linkedin alternate icon"></i>
             </a>
         </div>
     </div>
-    <div class="three wide column"></div>
+<!--    <div class="one wide computer only column"></div>-->
+    <div class="one wide column"></div>
 </div>
 </body>
 </html>
