Fix padding on mobile

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div class="row"></div>
     <div class="row"></div>
     <div class="row"></div>
-    <div class="one wide column"></div>
-    <div class="six wide middle aligned column">
+    <div class="two wide column"></div>
+    <div class="five wide middle aligned column" id="avatar">
         <img class="ui fluid image" src="assets/tannaz.gif" alt="avatar"/>
     </div>
-    <div class="eight wide middle aligned column">
+    <div class="eight wide middle aligned column" id="text">
         <div class="row"></div>
         <h1>hi, i'm tannaz!</h1>
         <h2>a digital product designer based in iran.</h2>
@@ -46,7 +46,6 @@
             </a>
         </div>
     </div>
-<!--    <div class="one wide computer only column"></div>-->
     <div class="one wide column"></div>
 </div>
 </body>
