--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="row"></div>
         <h1>hi, i'm tannaz!</h1>
         <h2>a digital product designer based in iran.</h2>
-        <p>I strive to create beautiful solutions, spectacular sights and aesthetic visions.</p>
+        <p>i strive to create beautiful solutions, spectacular sights and aesthetic visions.</p>
         <p>
             ____
             <br/>
