--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="https://dribbble.com/tannazsadeghi" class="ui icon circular large button" target="_blank">
                 <i class="dribbble icon"></i>
             </a>
-            <a href="https://www.instagram.com/potatotaster/" class="ui icon circular large button" target="_blank">
+            <a href="https://www.instagram.com/tz.sadeghi/" class="ui icon circular large button" target="_blank">
                 <i class="instagram icon"></i>
             </a>
             <a href="https://www.linkedin.com/in/tannazsadeghi/" class="ui icon circular large button" target="_blank">
