--- a/new.html
+++ b/new.html
@@ -15,21 +15,13 @@
 
 
     <link rel="stylesheet" type="text/css" href="css/style_new.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Tannaz Sadeghi</title>
 </head>
 
 <body>
 
     <div class="ui stackable grid">
-
-        <!-- <div class="row">
-                
-            </div> -->
-        <!-- <div class="row"></div>
-                <div class="row"></div> -->
         <div class="two wide column"></div>
         <div class="twelve wide column">
 
@@ -43,7 +35,6 @@
             </div>
 
             <!-- header -->
-
             <div class="ui grid">
                 <div class="three wide middle aligned column" id="avatar">
                     <img class="ui fluid image" src="assets/tannaz.gif" alt="avatar" />
@@ -52,38 +43,49 @@
                     <div class="row"></div>
                     <h1>Hello, I’m Tannaz!</h1>
                     <!-- <h2>a digital product designer based in iran.</h2> -->
-                    <p>A product designer currently working at Snapp!, designing the passenger’s experience and
-                        everything in-between.</p>
+                    <p>A product designer currently working at Snapp!, designing the passenger’s experience and everything in-between.</p>
 
 
                 </div>
             </div>
+            <div class="horizontal separator"></div>
 
             <!-- works -->
+            <div class="ui fluid segment work">
+                <div class="ui grid">
+                    <div class="nine wide column">
+                        <img class="ui image work_image" src="assets/images/work.png">
+                    </div>
+                    <div class="seven wide middle aligned column">
+                        <div class="work_text">
+                            Snapp! Corporate Panel Redesign Read more
+                        </div>
+                    </div>
 
-
-
-
+                </div>
+            </div>
+            <div class="ui fluid segment work"></div>
+            <div class="ui fluid segment work"></div>
+            <div class="ui fluid segment work"></div>
         </div>
 
-
-
         <div class="two wide column"></div>
-
         <!-- footer -->
-
         <div class="row" id="footer">
             <div class="two wide column"></div>
             <div class="twelve wide column">
                 <div class="ui grid">
-                    <div class="twelve wide column"></div>
+                    <div class="twelve wide middle aligned column">
+                        <p id="copyright">
+                            © 2020 Tannaz Sadeghi
+                        </p>
+                    </div>
                     <div class="four wide right aligned column">
 
                         <a href="mailto:tz.sadeghi@outlook.com" class="ui icon large button footer">
                             <i class="mail outline icon"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/tannazsadeghi/" class="ui icon large button"
-                            target="_blank">
+                        <a href="https://www.linkedin.com/in/tannazsadeghi/" class="ui icon large button" target="_blank">
                             <i class="linkedin alternate icon"></i>
                         </a>
 
@@ -100,4 +102,5 @@
         </div>
     </div>
 </body>
+
 </html>
