--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
     <article class="work-sample">
-        <a href="samples/change-dest" class="link">
+        <a href="works/change-dest" class="link">
             <img src="assets/works/change-dest.png" alt="Change Destination Photo"/>
             <img src="assets/works/change-dest-colored.png" alt="Change Destination Photo"/>
             <div class="sample-title">
@@ -73,7 +73,7 @@
     </article>
 
     <article class="work-sample">
-        <a href="samples/change-dest" class="link">
+        <a href="works/change-dest" class="link">
             <img src="assets/works/chat.png" alt="Change Destination Photo"/>
             <img src="assets/works/chat-colored.png" alt="Change Destination Photo"/>
             <div class="sample-title">
