--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <nav id="nav">
     <div class="nav-content">
+        <img id="tannaz-nav" src="assets/tannaz-nav.png"/>
         <ul class="menu">
             <li>Works</li>
             <li><a href="/about">About</a></li>
@@ -39,9 +40,14 @@
 
 
     <article class="work-sample">
-        <a href="works/change-dest" class="link">
-            <img src="assets/works/change-dest.png" alt="Change Destination Photo"/>
-            <img src="assets/works/change-dest-colored.png" alt="Change Destination Photo"/>
+        <a href="works/change-dest.html" class="link">
+            <div class="image-box">
+                <img class="image-gray" src="assets/works/change-dest.png" alt="Change Destination Photo"/>
+                <img class="image-colored" src="assets/works/change-dest-colored.png" alt="Change Destination Photo"/>
+                <div class="hidden">
+                    <img src="assets/works/change-dest.png" alt="Change Destination Photo"/>
+                </div>
+            </div>
             <div class="sample-title">
                 <h2>Snapp! Change Destination Feature</h2>
                 <div class="read-more">
@@ -57,8 +63,13 @@
 
     <article class="work-sample">
         <a href="works/change-dest" class="link">
-            <img src="assets/works/vouchers.png" alt="Change Destination Photo"/>
-            <img src="assets/works/vouchers-colored.png" alt="Change Destination Photo"/>
+            <div class="image-box">
+                <img class="image-gray" src="assets/works/vouchers.png" alt="Change Destination Photo"/>
+                <img class="image-colored" src="assets/works/vouchers-colored.png" alt="Change Destination Photo"/>
+                <div class="hidden">
+                    <img src="assets/works/vouchers.png" alt="Change Destination Photo"/>
+                </div>
+            </div>
             <div class="sample-title">
                 <h2>Snapp! Voucher and Rewards Feature</h2>
                 <div class="read-more">
@@ -74,8 +85,13 @@
 
     <article class="work-sample">
         <a href="works/change-dest" class="link">
-            <img src="assets/works/chat.png" alt="Change Destination Photo"/>
-            <img src="assets/works/chat-colored.png" alt="Change Destination Photo"/>
+            <div class="image-box">
+                <img class="image-gray" src="assets/works/chat.png" alt="Change Destination Photo"/>
+                <img class="image-colored" src="assets/works/chat-colored.png" alt="Change Destination Photo"/>
+                <div class="hidden">
+                    <img src="assets/works/chat.png" alt="Change Destination Photo"/>
+                </div>
+            </div>
             <div class="sample-title">
                 <h2>Snapp! Chat Module Feature</h2>
                 <div class="read-more">
@@ -91,8 +107,15 @@
 
     <article class="work-sample">
         <a href="samples/change-dest" class="link">
-            <img src="assets/works/team-app.png" alt="Change Destination Photo"/>
-            <img src="assets/works/teamapp-colored.png" alt="Change Destination Photo"/>
+            <div class="image-box">
+                <img class="image-gray" src="assets/works/team-app.png" alt="Change Destination Photo"/>
+                <img class="image-colored" src="assets/works/teamapp-colored.png" alt="Change Destination Photo"/>
+                <div class="hidden">
+                    <span></span>
+                    <img src="assets/works/team-app.png" alt="Change Destination Photo"/>
+                    <span></span>
+                </div>
+            </div>
             <div class="sample-title">
                 <h2>TeamApp's Affiliate Program Landing Page Design</h2>
                 <div class="read-more">
@@ -112,9 +135,11 @@
         <div>© 2021 Tannaz Sadeghi</div>
         <div class="padding"></div>
         <div class="social">
-            <a href="mailto:tz.sadeghi@outlook.com" target="_blank"><img src="assets/icons/icon-mail.svg" alt="mail"/></a>
-            <a href="https://www.linkedin.com/in/tannazsadeghi/" target="_blank"><img src="assets/icons/icon-linkedin.svg"
-                                                                                      alt="linkedin"/></a>
+            <a href="mailto:tz.sadeghi@outlook.com" target="_blank"><img src="assets/icons/icon-mail.svg"
+                                                                         alt="mail"/></a>
+            <a href="https://www.linkedin.com/in/tannazsadeghi/" target="_blank"><img
+                    src="assets/icons/icon-linkedin.svg"
+                    alt="linkedin"/></a>
             <a href="https://dribbble.com/tannazsadeghi" target="_blank"><img src="assets/icons/icon-dribbble.svg"
                                                                               alt="dribble"/></a>
             <a href="https://www.instagram.com/tz.sadeghi/" target="_blank"><img src="assets/icons/icon-instagram.svg"
