--- a/works/change-dest.html
+++ b/works/change-dest.html
@@ -11,12 +11,17 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/works.css">
 </head>
-<body>
+<body class="change-dest">
 
 <div class="work-container">
     <div class="work-header">
-        <h1>Snapp! Change Destination
-            Feature</h1>
+        <img class="mobile-header" src="../assets/change-dest/pic.png">
+        <div class="center">
+            <h1>Snapp! Change Destination
+                Feature
+            </h1>
+        </div>
+        <img class="mobile-header-hidden" src="../assets/change-dest/pic.png">
     </div>
 </div>
 
@@ -136,9 +141,22 @@
     </div>
     <div class="pagination">
         <div class="pagination-content">
-<!--            <a href="/works/team-app">TeamApp Landing Page Design</a>-->
-            <div>
+            <a class="prev-page" href="/works/team-app">
+                <div class="arrow">
+                    <div></div>
+                    <div></div>
+                </div>
+                TeamApp Landing Page Design
+            </a>
+
+            <div class="padding">
             </div>
+            <a class="next-page" href="/works/team-app">Snapp! Voucher and Rewards Feature
+                <div class="arrow">
+                    <div></div>
+                    <div></div>
+                </div>
+            </a>
         </div>
     </div>
 </main>
@@ -148,13 +166,16 @@
         <div>© 2021 Tannaz Sadeghi</div>
         <div class="padding"></div>
         <div class="social">
-            <a href="mailto:tz.sadeghi@outlook.com" target="_blank"><img src="../assets/icons/icon-mail.svg" alt="mail"/></a>
-            <a href="https://www.linkedin.com/in/tannazsadeghi/" target="_blank"><img src="../assets/icons/icon-linkedin.svg"
-                                                                                      alt="linkedin"/></a>
+            <a href="mailto:tz.sadeghi@outlook.com" target="_blank"><img src="../assets/icons/icon-mail.svg"
+                                                                         alt="mail"/></a>
+            <a href="https://www.linkedin.com/in/tannazsadeghi/" target="_blank"><img
+                    src="../assets/icons/icon-linkedin.svg"
+                    alt="linkedin"/></a>
             <a href="https://dribbble.com/tannazsadeghi" target="_blank"><img src="../assets/icons/icon-dribbble.svg"
                                                                               alt="dribble"/></a>
-            <a href="https://www.instagram.com/tz.sadeghi/" target="_blank"><img src="../assets/icons/icon-instagram.svg"
-                                                                                 alt="instagram"/></a>
+            <a href="https://www.instagram.com/tz.sadeghi/" target="_blank"><img
+                    src="../assets/icons/icon-instagram.svg"
+                    alt="instagram"/></a>
         </div>
     </div>
     <a class="top-link" href="#top">
