--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="nav-content">
         <img id="tannaz-nav" src="assets/tannaz-nav.png"/>
         <ul class="menu">
-            <li>Works</li>
-            <li><a href="/about">About</a></li>
-            <li>Resume</li>
+            <li class="active"><a href="index.html">Works</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="resume/tannazsadeghi-resume.pdf" target="_blank">Resume</a> </li>
         </ul>
     </div>
 </nav>
@@ -62,7 +62,7 @@
     </article>
 
     <article class="work-sample">
-        <a href="works/change-dest" class="link">
+        <a href="works/vouchers.html" class="link">
             <div class="image-box">
                 <img class="image-gray" src="assets/works/vouchers.png" alt="Change Destination Photo"/>
                 <img class="image-colored" src="assets/works/vouchers-colored.png" alt="Change Destination Photo"/>
@@ -84,7 +84,7 @@
     </article>
 
     <article class="work-sample">
-        <a href="works/change-dest" class="link">
+        <a href="works/chat.html" class="link">
             <div class="image-box">
                 <img class="image-gray" src="assets/works/chat.png" alt="Change Destination Photo"/>
                 <img class="image-colored" src="assets/works/chat-colored.png" alt="Change Destination Photo"/>
@@ -106,7 +106,7 @@
     </article>
 
     <article class="work-sample">
-        <a href="samples/change-dest" class="link">
+        <a href="works/teamapp.html" class="link">
             <div class="image-box">
                 <img class="image-gray" src="assets/works/team-app.png" alt="Change Destination Photo"/>
                 <img class="image-colored" src="assets/works/teamapp-colored.png" alt="Change Destination Photo"/>
