--- a/works/change-dest.html
+++ b/works/change-dest.html
@@ -31,9 +31,9 @@
             <img src="../assets/tannaz-nav.png"/>
         </div>
         <ul class="menu">
-            <li>Works</li>
-            <li>About</li>
-            <li>Resume</li>
+            <li><a href="../index.html">Works</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../resume/tannazsadeghi-resume.pdf" target="_blank">Resume</a> </li>
         </ul>
     </div>
 </nav>
@@ -141,7 +141,7 @@
     </div>
     <div class="pagination">
         <div class="pagination-content">
-            <a class="prev-page" href="/works/team-app">
+            <a class="prev-page" href="./teamapp.html">
                 <div class="arrow">
                     <div></div>
                     <div></div>
@@ -151,7 +151,7 @@
 
             <div class="padding">
             </div>
-            <a class="next-page" href="/works/team-app">Snapp! Voucher and Rewards Feature
+            <a class="next-page" href="./vouchers.html">Snapp! Voucher and Rewards Feature
                 <div class="arrow">
                     <div></div>
                     <div></div>
