--- a/works/chat.html
+++ b/works/chat.html
@@ -29,9 +29,9 @@
             <img src="../assets/tannaz-nav.png"/>
         </div>
         <ul class="menu">
-            <li>Works</li>
-            <li>About</li>
-            <li>Resume</li>
+            <li><a href="../index.html">Works</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../resume/tannazsadeghi-resume.pdf" target="_blank">Resume</a> </li>
         </ul>
     </div>
 </nav>
@@ -183,7 +183,7 @@
     </div>
     <div class="pagination">
         <div class="pagination-content">
-            <a class="prev-page" href="/works/team-app">
+            <a class="prev-page" href="./vouchers.html">
                 <div class="arrow">
                     <div></div>
                     <div></div>
@@ -193,7 +193,7 @@
 
             <div class="padding">
             </div>
-            <a class="next-page" href="/works/team-app">
+            <a class="next-page" href="./teamapp.html">
                 TeamApp Landing Page Design
                 <div class="arrow">
                     <div></div>
