--- a/about.html
+++ b/about.html
@@ -16,12 +16,12 @@
 <nav id="nav">
     <div class="nav-content">
         <div class="tannaz-image">
-            <img src="assets/tannaz.gif"/>
+            <img src="assets/tannaz-nav.png"/>
         </div>
         <ul class="menu">
-            <li>Works</li>
-            <li>About</li>
-            <li>Resume</li>
+            <li><a href="index.html">Works</a></li>
+            <li class="active"><a href="about.html">About</a></li>
+            <li><a href="resume/tannazsadeghi-resume.pdf" target="_blank">Resume</a> </li>
         </ul>
     </div>
 </nav>
