--- a/works/vouchers.html
+++ b/works/vouchers.html
@@ -28,9 +28,9 @@
             <img src="../assets/tannaz-nav.png"/>
         </div>
         <ul class="menu">
-            <li>Works</li>
-            <li>About</li>
-            <li>Resume</li>
+            <li><a href="../index.html">Works</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../resume/tannazsadeghi-resume.pdf" target="_blank">Resume</a> </li>
         </ul>
     </div>
 </nav>
@@ -124,17 +124,17 @@
     </div>
     <div class="pagination">
         <div class="pagination-content">
-            <a class="prev-page" href="/works/team-app">
+            <a class="prev-page" href="./change-dest.html">
                 <div class="arrow">
                     <div></div>
                     <div></div>
                 </div>
-                TeamApp Landing Page Design
+                Snapp! Change Destination Feature
             </a>
 
             <div class="padding">
             </div>
-            <a class="next-page" href="/works/team-app">Snapp! Voucher and Rewards Feature
+            <a class="next-page" href="./chat.html">Snapp! Chat Module Feature
                 <div class="arrow">
                     <div></div>
                     <div></div>
