fixed link to home

--- a/about.html
+++ b/about.html
@@ -17,7 +17,9 @@
 <nav id="nav">
     <div class="nav-content">
         <div class="tannaz-image">
-            <img src="assets/tannaz-nav.png"/>
+            <a href="index.html">
+                <img src="assets/tannaz-nav.png"/>
+            </a>
         </div>
         <ul class="menu">
             <li><a href="index.html">Works</a></li>
