--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
 <nav id="nav">
     <div class="nav-content">
-        <img id="tannaz-nav" src="assets/tannaz-nav.png"/>
+        <a id="tannaz-nav" href="index.html">
+            <img src="assets/tannaz-nav.png"/>
+        </a>
+
         <ul class="menu">
             <li class="active"><a href="index.html">Works</a></li>
             <li><a href="about.html">About</a></li>
