--- a/works/change-dest.html
+++ b/works/change-dest.html
@@ -29,12 +29,14 @@
 <nav id="nav" class="background-green">
     <div class="nav-content">
         <div class="tannaz-image">
-            <img src="../assets/tannaz-nav.png"/>
+            <a href="../index.html">
+                <img src="../assets/tannaz-nav.png"/>
+            </a>
         </div>
         <ul class="menu">
             <li><a href="../index.html">Works</a></li>
             <li><a href="../about.html">About</a></li>
-            <li><a href="../resume/tannazsadeghi-resume.pdf" target="_blank">Resume</a> </li>
+            <li><a href="../resume/tannazsadeghi-resume.pdf" target="_blank">Resume</a></li>
         </ul>
     </div>
 </nav>
