--- a/works/vouchers.html
+++ b/works/vouchers.html
@@ -26,7 +26,9 @@
 <nav id="nav" class="background-green">
     <div class="nav-content">
         <div class="tannaz-image">
-            <img src="../assets/tannaz-nav.png"/>
+            <a href="../index.html">
+                <img src="../assets/tannaz-nav.png"/>
+            </a>
         </div>
         <ul class="menu">
             <li><a href="../index.html">Works</a></li>
