Fix vouchers layout

--- a/works/vouchers.html
+++ b/works/vouchers.html
@@ -92,7 +92,7 @@
 
         </article>
     </div>
-    <div class="back-white padding-bottom-32">
+    <div class="back-white padding-bottom-0">
         <article class="work-article">
             <h2>Final Designs</h2>
             <p class="work-text-normal">For the designs, since we had vouchers before, I tried to keep it as simple and
@@ -102,18 +102,18 @@
         <div class="work-image-normal margin-top-29">
             <img src="../assets/vouchers/target-based.png" alt="Target Based Vouchers"/>
         </div>
-        <div class="work-image-normal margin-top-72">
+        <div class="work-image-normal margin-top-0">
             <img src="../assets/vouchers/direct-discount.png" alt="Direct Discount Vouchers"/>
         </div>
-        <div class="work-image-normal margin-top-72">
+        <div class="work-image-normal margin-top-0">
             <img src="../assets/vouchers/compound.png" alt="Compound Vouchers"/>
         </div>
-        <div class="work-image-normal margin-top-72">
+        <div class="work-image-normal margin-top-0">
             <img src="../assets/vouchers/empty.png" alt="Empty State"/>
         </div>
     </div>
     <div class="back-white padding-bottom-49">
-        <article class="work-article">
+        <article class="work-article last-work-article">
             <h2>Results</h2>
             <p class="work-text-normal">Based on our A/B tests, these mission type vouchers has reduced the cost of the
                 normal vouchers, and it has increased conversion rate. <br/> <br/>
