fix chat layout

--- a/works/vouchers.html
+++ b/works/vouchers.html
@@ -64,7 +64,7 @@
             </p>
         </article>
         <div class="work-image">
-            <img src="../assets/vouchers/icon-problem.svg" alt="Problem Icon"/>
+            <img src="../assets/vouchers/icon-problem.svg" id="problem" alt="Problem Icon"/>
         </div>
     </div>
     <div class="back-black padding-bottom-55">
