--- a/works/change-dest.html
+++ b/works/change-dest.html
@@ -109,7 +109,7 @@
             <img src="../assets/change-dest/wireframe.png" alt="Pie chart showing survery results"/>
         </div>
     </div>
-    <div class="back-white padding-bottom-64">
+    <div class="back-white padding-bottom-0">
         <article class="work-article">
             <h2>Final design</h2>
             <p class="work-text-normal">After a lot of iterations, the designs were final and it was time to have a demo
@@ -139,7 +139,7 @@
                 Also we checked our CC calls regarding change destination requests and it has reduced the calls.
             </p>
         </article>
-        <div class="work-image-normal">
+        <div class="work-image">
             <img src="../assets/change-dest/illustration.png" alt="Final design touchpoints"/>
         </div>
     </div>
