fix about layout

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
             </p>
         </div>
         <div class="tannaz-real">
-            <img src="assets/tannaz-real.png" alt="Tannaz Real"/>
+            <img src="assets/tannaz-real.png" id="portrait" alt="Tannaz Real"/>
         </div>
     </header>
     <div class="content">
