fix remaining layout issues

--- a/works/change-dest.html
+++ b/works/change-dest.html
@@ -105,7 +105,7 @@
                 wire-framing. &nbsp;
             </p>
         </article>
-        <div class="work-image">
+        <div class="work-image-normal">
             <img src="../assets/change-dest/wireframe.png" alt="Pie chart showing survery results"/>
         </div>
     </div>
@@ -125,7 +125,7 @@
         <article class="work-article">
             <h2>Final design in flow</h2>
         </article>
-        <div class="work-image">
+        <div class="work-image-normal">
             <img src="../assets/change-dest/design-in-flowchart.png" alt="Final design in flow images"/>
         </div>
     </div>
