--- a/works/chat.html
+++ b/works/chat.html
@@ -50,7 +50,7 @@
             below, I have placed it beside the Call button. The reason behind it was that both of them are for
             contacting the driver so they should be next to each other.
         </p>
-        <div class="work-image">
+        <div class="work-image-normal">
             <img src="../assets/chat/old-chat.png" alt="Old Chat"/>
         </div>
         <div class="subtitle">The first version of Chat Module in Snapp</div>
@@ -156,20 +156,20 @@
         </article>
     </div>
 
-    <div class="back-white padding-bottom-32">
+    <div class="back-white padding-0">
         <article class="work-article">
             <h2>Designs</h2>
             <p class="work-text-normal">After analyzing the results of the survey, the key actions we had to do became
                 clear. I designed a solution for everything the users needed.
             </p>
         </article>
-        <div class="work-image margin-top-24">
+        <div class="work-image-normal margin-top-24">
             <img src="../assets/chat/group-22.png" alt="Making chat more visible"/>
         </div>
-        <div class="work-image margin-top-0">
+        <div class="work-image-normal margin-top-0">
             <img src="../assets/chat/group-25.png" alt="Read and delivered indicators"/>
         </div>
-        <div class="work-image margin-top-0">
+        <div class="work-image-normal margin-top-0">
             <img src="../assets/chat/group-24.png" alt="Sending Location"/>
         </div>
     </div>
