Add video service, change urls

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
 <nav id="nav">
     <div class="nav-content">
-        <a id="tannaz-nav" href="index.html">
+        <a id="tannaz-nav" href=".">
             <img src="assets/tannaz-nav.png"/>
         </a>
 
         <ul class="menu">
-            <li class="active"><a href="index.html">Works</a></li>
-            <li><a href="about.html">About</a></li>
+            <li class="active"><a href=".">Works</a></li>
+            <li><a href="about">About</a></li>
             <li><a href="resume/tannazsadeghi-resume.pdf" target="_blank">Resume</a> </li>
         </ul>
     </div>
@@ -43,9 +43,55 @@
         </div>
     </header>
 
+    <article class="work-sample">
+        <a href="video" class="link">
+            <div class="image-box">
+                <img class="image-gray" src="assets/works/video.png" alt="Video Photo"/>
+                <img class="image-colored" src="assets/works/video-colored.png" alt="Video Photo"/>
+                <div class="hidden">
+                    <span></span>
+                    <img src="assets/works/video.png" alt="Video Photo"/>
+                    <span></span>
+                </div>
+            </div>
+            <div class="sample-title">
+                <h2>Cafe Bazaar's Video Service</h2>
+                <div class="read-more">
+                    Read more
+                    <div class="arrow">
+                        <div></div>
+                        <div></div>
+                    </div>
+                </div>
+            </div>
+        </a>
+    </article>
 
     <article class="work-sample">
-        <a href="works/change-dest.html" class="link">
+        <a href="chat" class="link">
+            <div class="image-box">
+                <img class="image-gray" src="assets/works/chat.png" alt="Change Destination Photo"/>
+                <img class="image-colored" src="assets/works/chat-colored.png" alt="Change Destination Photo"/>
+                <div class="hidden">
+                    <img src="assets/works/chat.png" alt="Change Destination Photo"/>
+                </div>
+            </div>
+            <div class="sample-title">
+                <h2>Snapp! Chat Module Feature</h2>
+                <div class="read-more">
+                    Read more
+                    <div class="arrow">
+                        <div></div>
+                        <div></div>
+                    </div>
+                </div>
+            </div>
+        </a>
+    </article>
+
+
+    <article class="work-sample">
+        <a href="change-dest" class="link">
             <div class="image-box">
                 <img class="image-gray" src="assets/works/change-dest.png" alt="Change Destination Photo"/>
                 <img class="image-colored" src="assets/works/change-dest-colored.png" alt="Change Destination Photo"/>
@@ -67,7 +113,7 @@
     </article>
 
     <article class="work-sample">
-        <a href="works/vouchers.html" class="link">
+        <a href="vouchers" class="link">
             <div class="image-box">
                 <img class="image-gray" src="assets/works/vouchers.png" alt="Change Destination Photo"/>
                 <img class="image-colored" src="assets/works/vouchers-colored.png" alt="Change Destination Photo"/>
@@ -77,52 +123,6 @@
             </div>
             <div class="sample-title">
                 <h2>Snapp! Voucher and Rewards Feature</h2>
-                <div class="read-more">
-                    Read more
-                    <div class="arrow">
-                        <div></div>
-                        <div></div>
-                    </div>
-                </div>
-            </div>
-        </a>
-    </article>
-
-    <article class="work-sample">
-        <a href="works/chat.html" class="link">
-            <div class="image-box">
-                <img class="image-gray" src="assets/works/chat.png" alt="Change Destination Photo"/>
-                <img class="image-colored" src="assets/works/chat-colored.png" alt="Change Destination Photo"/>
-                <div class="hidden">
-                    <img src="assets/works/chat.png" alt="Change Destination Photo"/>
-                </div>
-            </div>
-            <div class="sample-title">
-                <h2>Snapp! Chat Module Feature</h2>
-                <div class="read-more">
-                    Read more
-                    <div class="arrow">
-                        <div></div>
-                        <div></div>
-                    </div>
-                </div>
-            </div>
-        </a>
-    </article>
-
-    <article class="work-sample">
-        <a href="works/teamapp.html" class="link">
-            <div class="image-box">
-                <img class="image-gray" src="assets/works/team-app.png" alt="Change Destination Photo"/>
-                <img class="image-colored" src="assets/works/teamapp-colored.png" alt="Change Destination Photo"/>
-                <div class="hidden">
-                    <span></span>
-                    <img src="assets/works/team-app.png" alt="Change Destination Photo"/>
-                    <span></span>
-                </div>
-            </div>
-            <div class="sample-title">
-                <h2>TeamApp's Affiliate Program Landing Page Design</h2>
                 <div class="read-more">
                     Read more
                     <div class="arrow">
@@ -164,4 +164,3 @@
 <script src="js/script.js"></script>
 </body>
 </html>
-
